--- a/src/Component/inputDetails/index.css
+++ b/src/Component/inputDetails/index.css
@@ -139,6 +139,7 @@
     font-weight: 500;
     font-size: 10px;
     margin-left: 5px;
+    border-color: #f8fafc;
   }
 
   .h-line {
@@ -258,6 +259,7 @@
     font-weight: 500;
     font-size: 16px;
     margin-left: 10px;
+    border-color: transparent;
   }
   .btn-container {
     text-align: right;
